[package]
name = "dumpster-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
b64 = "0.4"
axum = "0.6"
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.4", features = ["fs"] }
libdumpster = { version = "*", path = "../libdumpster/" }
