[package]
name = "libdumpster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["image"]
image = ["dep:image"]

[dependencies]
ron = "0.8"
serde = { version = "1", features = ["derive"] }
rand = { version = "0.8", features = ["getrandom"] }

image = { version = "0.24", optional = true }
