[package]
name = "libdumpster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
rand = "0.8.5"
tokio = { version = "1", features = ["fs", "macros"] }
image = "0.24"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "fs", "macros"] }
